compiler-core/src/parse/snapshots/gleam_core__parse__tests__no_eq_after_binding_snapshot_1.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 351
expression: let foo
---
error: Syntax error
  ┌─ /src/parse/error.gleam:1:5
  │
1 │ let foo
  │     ^^^ I was expecting a '=' after this


